# plugget-qt-blender-addon

./: README.md  installer.py  pyproject.toml  requirements.txt
installer/: install_script.py  installer-blender-2.93.blend
plugget_qt_addon/: __init__.py
