[build-system]
requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["plugget_qt_addon"]


[project]
name = "plugget_qt_addon"
authors = [
    {name = "Hannes"},
]
description = "plugget qt addon"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["package"]
# license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
# dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', "plugget-qt"]
# dynamic = ["version"]
version = "0.1.0"  # dont forget to update bl_info

# [project.optional-dependencies]
# yaml = ["pyyaml"]

# [project.scripts]
# my-script = "my_package.module:function"

[project.urls]
Source = "https://github.com/hannesdelbeke/plugget-qt-addon"
